--- a/index.html
+++ b/index.html
@@ -4,9 +4,177 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FIFA World Cup 2022</title>
+    <title>FIFA World Cup-2022</title>
+    <!-- Font Awsome -->
+    <script src="https://kit.fontawesome.com/126fa0a6e1.js" crossorigin="anonymous"></script>
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <!-- head banner  -->
+    <header class="banner-container">
+        <div class="banner-info">
+            <h1>The Greatest <span>Game</span> on the earth</h1>
+            <p>FIFA World Cup-2022 is bringing excitement to the people of the whole world. People all over the places are waiting for this moment for a long time. Let's enjoy the game with great pleasure.</p>
+            <a href="">Watch Live <i class="fa fa-solid fa-arrow-right"></i></a>
+        </div>
+        <div class="banner-image">
+            <img src="images/banner-player.png" alt="">
+        </div>
+    </header>
+    <!-- main part -->
+    <main class="main-section">
+        <!-- link part -->
+        <section class="section-link">
+            <a href="#">Upcoming Match</a>
+            <a href="#">All Group</a>
+            <a href="#" id="blog-link">Blog</a>
+        </section>
+        <!-- blog part -->
+        <section class="blogs">
+            <!-- blog-1  -->
+            <div class="blog">
+                <div>
+                    <img src="images/Blog Image.png" alt="">
+                </div>
+                <div class="blog-details">
+                    <a href="">Watch</a>
+                    <h3>Watch live: Watch the amazing match between South Korea and Brazil</h3>
+                    <div class="blog-info">
+                        <p><i class="fa fa-solid fa-clock"></i> 5h</p>
+                        <div class="comment"><img src="images/Chat Icon.png" alt=""><p> 45</p></div>
+                    </div>
+                </div>
+            </div>
+            <!-- blog-2  -->
+            <div class="blog">
+                <div>
+                    <img src="images/Blog Image.png" alt="">
+                </div>
+                <div class="blog-details">
+                    <a href="">Watch</a>
+                    <h3>Watch live: Watch the amazing match between South Korea and Brazil</h3>
+                    <div class="blog-info">
+                        <p><i class="fa fa-solid fa-clock"></i> 5h</p>
+                        <div class="comment"><img src="images/Chat Icon.png" alt=""><p> 45</p></div>
+                    </div>
+                </div>
+            </div>
+            <!-- vlog-3  -->
+            <div class="blog">
+                <div>
+                    <img src="images/Blog Image.png" alt="">
+                </div>
+                <div class="blog-details">
+                    <a href="">Watch</a>
+                    <h3>Watch live: Watch the amazing match between South Korea and Brazil</h3>
+                    <div class="blog-info">
+                        <p><i class="fa fa-solid fa-clock"></i> 5h</p>
+                        <div class="comment"><img src="images/Chat Icon.png" alt=""><p> 45</p></div>
+                    </div>
+                </div>
+            </div>
+            <!-- blog-4  -->
+            <div class="blog">
+                <div>
+                    <img src="images/Blog Image.png" alt="">
+                </div>
+                <div class="blog-details">
+                    <a href="">Watch</a>
+                    <h3>Watch live: Watch the amazing match between South Korea and Brazil</h3>
+                    <div class="blog-info">
+                        <p><i class="fa fa-solid fa-clock"></i> 5h</p>
+                        <div class="comment"><img src="images/Chat Icon.png" alt=""><p> 45</p></div>
+                    </div>
+                </div>
+            </div>
+            <!-- blog-5  -->
+            <div class="blog">
+                <div>
+                    <img src="images/Blog Image.png" alt="">
+                </div>
+                <div class="blog-details">
+                    <a href="">Watch</a>
+                    <h3>Watch live: Watch the amazing match between South Korea and Brazil</h3>
+                    <div class="blog-info">
+                        <p><i class="fa fa-solid fa-clock"></i> 5h</p>
+                        <div class="comment"><img src="images/Chat Icon.png" alt=""><p> 45</p></div>
+                    </div>
+                </div>
+            </div>
+            <!-- blog-6  -->
+            <div class="blog">
+                <div>
+                    <img src="images/Blog Image.png" alt="">
+                </div>
+                <div class="blog-details">
+                    <a href="">Watch</a>
+                    <h3>Watch live: Watch the amazing match between South Korea and Brazil</h3>
+                    <div class="blog-info">
+                        <p><i class="fa fa-solid fa-clock"></i> 5h</p>
+                        <div class="comment"><img src="images/Chat Icon.png" alt=""><p> 45</p></div>
+                    </div>
+                </div>
+            </div>
+            <!-- blog-7  -->
+            <div class="blog">
+                <div>
+                    <img src="images/Blog Image.png" alt="">
+                </div>
+                <div class="blog-details">
+                    <a href="">Watch</a>
+                    <h3>Watch live: Watch the amazing match between South Korea and Brazil</h3>
+                    <div class="blog-info">
+                        <p><i class="fa fa-solid fa-clock"></i> 5h</p>
+                        <div class="comment"><img src="images/Chat Icon.png" alt=""><p> 45</p></div>
+                    </div>
+                </div>
+            </div>
+            <!-- blog-8  -->
+            <div class="blog">
+                <div>
+                    <img src="images/Blog Image.png" alt="">
+                </div>
+                <div class="blog-details">
+                    <a href="">Watch</a>
+                    <h3>Watch live: Watch the amazing match between South Korea and Brazil</h3>
+                    <div class="blog-info">
+                        <p><i class="fa fa-solid fa-clock"></i> 5h</p>
+                        <div class="comment"><img src="images/Chat Icon.png" alt=""><p> 45</p></div>
+                    </div>
+                </div>
+            </div>
+            <!-- blog-9  -->
+            <div class="blog">
+                <div>
+                    <img src="images/Blog Image.png" alt="">
+                </div>
+                <div class="blog-details">
+                    <a href="">Watch</a>
+                    <h3>Watch live: Watch the amazing match between South Korea and Brazil</h3>
+                    <div class="blog-info">
+                        <p><i class="fa fa-solid fa-clock"></i> 5h</p>
+                        <div class="comment"><img src="images/Chat Icon.png" alt=""><p> 45</p></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="viewAll-button">
+            <a href="#">View All</a>
+        </div>
+    </main>
+    <!-- footer part -->
+    <footer>
+        <h1>Let's Enjoy</h1>
+        <hr>
+        <div class="footer-links">
+            <p>Contact Us </p>
+            <p>Terms of Service</p>
+            <p>Privacy Policy</p>
+            <p>Privacy Settings</p>
+            <p>Goal App</p>
+            <p>Goal Live</p>
+        </div>
+    </footer>
 </body>
 </html>
