--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main class="main-section">
         <!-- link part -->
         <section class="section-link">
-            <a href="#">Upcoming Match</a>
+            <a href="upcomingmatch.html">Upcoming Match</a>
             <a href="#">All Group</a>
             <a href="#" id="blog-link">Blog</a>
         </section>
