--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="blog-details">
                     <a href="">Watch</a>
-                    <h3>Watch live: Watch the amazing match between South Korea and Brazil</h3>
+                    <h3>Watch live: Watch the amazing match between Germany and Brazil</h3>
                     <div class="blog-info">
                         <p><i class="fa fa-solid fa-clock"></i> 5h</p>
                         <div class="comment"><img src="images/Chat Icon.png" alt=""><p> 45</p></div>
@@ -53,7 +53,7 @@
                 </div>
                 <div class="blog-details">
                     <a href="">Watch</a>
-                    <h3>Watch live: Watch the amazing match between South Korea and Brazil</h3>
+                    <h3>Watch live: Watch the amazing match between Germany and Brazil</h3>
                     <div class="blog-info">
                         <p><i class="fa fa-solid fa-clock"></i> 5h</p>
                         <div class="comment"><img src="images/Chat Icon.png" alt=""><p> 45</p></div>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="blog-details">
                     <a href="">Watch</a>
-                    <h3>Watch live: Watch the amazing match between South Korea and Brazil</h3>
+                    <h3>Watch live: Watch the amazing match between Germany and Brazil</h3>
                     <div class="blog-info">
                         <p><i class="fa fa-solid fa-clock"></i> 5h</p>
                         <div class="comment"><img src="images/Chat Icon.png" alt=""><p> 45</p></div>
@@ -81,7 +81,7 @@
                 </div>
                 <div class="blog-details">
                     <a href="">Watch</a>
-                    <h3>Watch live: Watch the amazing match between South Korea and Brazil</h3>
+                    <h3>Watch live: Watch the amazing match between Germany and Brazil</h3>
                     <div class="blog-info">
                         <p><i class="fa fa-solid fa-clock"></i> 5h</p>
                         <div class="comment"><img src="images/Chat Icon.png" alt=""><p> 45</p></div>
@@ -95,7 +95,7 @@
                 </div>
                 <div class="blog-details">
                     <a href="">Watch</a>
-                    <h3>Watch live: Watch the amazing match between South Korea and Brazil</h3>
+                    <h3>Watch live: Watch the amazing match between Germany and Brazil</h3>
                     <div class="blog-info">
                         <p><i class="fa fa-solid fa-clock"></i> 5h</p>
                         <div class="comment"><img src="images/Chat Icon.png" alt=""><p> 45</p></div>
@@ -109,7 +109,7 @@
                 </div>
                 <div class="blog-details">
                     <a href="">Watch</a>
-                    <h3>Watch live: Watch the amazing match between South Korea and Brazil</h3>
+                    <h3>Watch live: Watch the amazing match between Germany and Brazil</h3>
                     <div class="blog-info">
                         <p><i class="fa fa-solid fa-clock"></i> 5h</p>
                         <div class="comment"><img src="images/Chat Icon.png" alt=""><p> 45</p></div>
@@ -123,7 +123,7 @@
                 </div>
                 <div class="blog-details">
                     <a href="">Watch</a>
-                    <h3>Watch live: Watch the amazing match between South Korea and Brazil</h3>
+                    <h3>Watch live: Watch the amazing match between Germany and Brazil</h3>
                     <div class="blog-info">
                         <p><i class="fa fa-solid fa-clock"></i> 5h</p>
                         <div class="comment"><img src="images/Chat Icon.png" alt=""><p> 45</p></div>
@@ -137,7 +137,7 @@
                 </div>
                 <div class="blog-details">
                     <a href="">Watch</a>
-                    <h3>Watch live: Watch the amazing match between South Korea and Brazil</h3>
+                    <h3>Watch live: Watch the amazing match between Germany and Brazil</h3>
                     <div class="blog-info">
                         <p><i class="fa fa-solid fa-clock"></i> 5h</p>
                         <div class="comment"><img src="images/Chat Icon.png" alt=""><p> 45</p></div>
@@ -151,7 +151,7 @@
                 </div>
                 <div class="blog-details">
                     <a href="">Watch</a>
-                    <h3>Watch live: Watch the amazing match between South Korea and Brazil</h3>
+                    <h3>Watch live: Watch the amazing match between Germany and Brazil</h3>
                     <div class="blog-info">
                         <p><i class="fa fa-solid fa-clock"></i> 5h</p>
                         <div class="comment"><img src="images/Chat Icon.png" alt=""><p> 45</p></div>
