--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FIFA World Cup-2022</title>
+    <!-- favicon -->
+    <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
     <!-- Font Awsome -->
     <script src="https://kit.fontawesome.com/126fa0a6e1.js" crossorigin="anonymous"></script>
     <!-- Stylesheet -->
